mutation observer added

--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,12 @@
     "action": {
         "default_popup": "popup.html"
     },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "run_at": "document_idle",
+            "js": ["content.js"]
+        }
+    ],
     "permissions": ["storage", "activeTab", "scripting"]
 }
