--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,6 @@
     "description": "This can be used to alert when a number reaches a certain level",
     "version": "1.0",
     "manifest_version": 3,
-    "host_permission": [
-        "https://app.uniswap.org/*/*"
-    ],
-    "background": {
-        "service_worker": "background.js"
-    },
-    "action": {
-        "default_popup": "popup.html"
-    },
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
@@ -19,5 +10,5 @@
             "js": ["content.js"]
         }
     ],
-    "permissions": ["storage", "activeTab", "scripting"]
+    "permissions": ["activeTab", "scripting"]
 }
