--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-    "name": "Alert Me Please",
-    "description": "This can be used to alert when a number reaches a certain level",
-    "version": "1.0",
-    "manifest_version": 3,
-    "content_scripts": [
-        {
-            "matches": ["<all_urls>"],
-            "run_at": "document_idle",
-            "js": ["content.js"]
-        }
-    ],
-    "permissions": ["activeTab", "scripting"]
+  "name": "Alert Me Please",
+  "description": "This can be used to alert when a number reaches a certain level",
+  "version": "1.1",
+  "manifest_version": 3,
+  "content_scripts": [
+    {
+      "matches": ["https://*.uniswap.org/*"],
+      "run_at": "document_end",
+      "js": ["build/index.js"]
+    }
+  ],
+  "permissions": ["https://*.uniswap.org/*"]
 }
